Add & Styling Search Box

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
         <div class="search">
           <i class="fas fa-search"></i>
         </div>
+        <input
+          type="text"
+          class="searchbox"
+          id="searchbox"
+          placeholder="Search ..."
+        />
       </div>
     </header>
 
