--- a/index.html
+++ b/index.html
@@ -155,6 +155,6 @@
       </div>
     </div>
 
-    <script src="/main.js"></script>
+    <script src="main.js" type="text/javascript"></script>
   </body>
 </html>
