fixing Some issues 2

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
     </section>
     <div class="video-section" id="video">
-      <video src="/video/video.mp4" autoplay loop muted></video>
+      <video></video>
       <div class="text">
         <h2>Hello Programmer</h2>
         <p>
